# RAG-validation-LLMs-ROS2

./: .gitignore  COMPLETE_DEMO.md  DISASSEMBLY_TEST_REPORT.md  FINAL_START.sh  FIXED_AND_READY.md  HOW_TO_USE_REAL_ROBOT.md  LLM_CONTROL_STATUS.md  PYTHON_VS_CPP_COMPARISON.md  README.md  READY_TO_TEST.md  START_HERE.md  compute_waypoints.py  computed_waypoints.json  demo_llm_control.sh  dependencies.repos  frames_2025-11-16_00.10.19.gv  get_joints.sh  listen_feedback.py  quick_verify.sh  run_executor.sh  simple_test.sh  test_disassembly_workflow.py  test_full_system.sh  test_joint_motion.py  test_launch.sh  test_llm_control.sh  test_moveit_direct.py  test_moveit_interface.py  test_rviz_motion.sh
.github/workflows/: python-tests.yml
src/battery_dismantle_task/: CMakeLists.txt  EXPERIMENT_DESIGN.md  QUICKSTART.md  diagnose_rviz.sh  fix_rviz_double_robot.md  package.xml  start_system.sh  stop_system.sh  test_execution.py  test_llm_planning.py  test_ui_command_matching.py
src/battery_dismantle_task/battery_dismantle_task/: motion_executor.py  session.py  skill_handlers.py  skill_server.py
src/battery_dismantle_task/config/: gen3_robotiq_2f_85.srdf  moveit_single_robot.rviz  waypoints.json
src/battery_dismantle_task/config/moveit/: moveit_controllers.yaml
src/battery_dismantle_task/launch/: fake_execution.launch.py
src/battery_dismantle_task/llm_agent/: executor.py  llm_client.py  planner.py  web_ui.py
src/battery_dismantle_task/llm_agent/config/: prompt.txt
src/battery_dismantle_task/llm_agent/outputs/: plan.json  run_log.txt
src/battery_dismantle_task/scripts/: publish_initial_joint_states.py  validate_config.py  visual_state_manager.py
src/battery_dismantle_task/src/: skill_server_node.cpp
src/llm_agent/: executor.py  llm_client.py  planner.py
src/llm_agent/config/: skills.json
src/llm_agent/rag_data/: experience_cases.json
