<?xml version="1.0"?>
<package format="3">
  <name>battery_dismantle_task</name>
  <version>0.1.0</version>
  <description>LLM-controlled battery disassembly task using Kinova Gen3 with Robotiq gripper</description>
  <maintainer email="olivia@example.com">Olivia</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ 依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>nlohmann_json_schema_validator_vendor</depend>

  <!-- MoveIt 和机器人 -->
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>kortex_description</depend>

  <!-- 可视化 -->
  <depend>rviz2</depend>

  <!-- Python 依赖（运行时） -->
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
